@startuml
'https://plantuml.com/class-diagram

class ToDoList{
    + main()
    + start()
}

class javafx.Item {
    - Item: Object
    - itemName: SimpleStringProperty
    - itemDescription: SimpleStringProperty
    - completedMark: SimpleStringProperty
    - dueDate: LocalDate
--
    + getItemName()
    + setItemName()
    + getItemDescription
    + setItemDescription
    + getDueDate
    + setDueDate
    + getCompletedMark
    + setCompletedMark
}

class FilePathGetterController {
    - FilePathTextField: TextField

    + saveButtonClicked()
}

class EditDateController {
    - DueDate: DatePicker

    + saveButtonClicked()
}

class HelpPageController {
    + backButtonClicked()
}

class ExpandItemController {
    + backButtonClicked()
}

class ToDoListController{
    - itemTableview: TableView
    - itemColumn: TableColumn
    - descriptionColumn: TableColumn
    - dueDateColumn: TableColumn
    - completeColumn: TableColumn
--
    - ItemName: TextField
    - DueDate: DatePicker
    - ItemDescription: TextField
    - ItemStatus: TextField
--
    + clearListButtonClicked()
    + expandItemButtonClicked()
    + editDueDateButtonClicked()
    + addNewItemButtonClicked()
    + exportListButtonClicked()
    + loadListButtonClicked()
    + displayAllItemsButtonClicked()
    + displayCompletedItemsButtonClicked()
    + displayIncompleteItemsButtonClicked()
    + deleteItemButtonClicked()
    + helpButtonClicked()
}

javafx.ToDoList <--> javafx.HelpPage
javafx.ToDoList <--> javafx.ExpandItem
javafx.ToDoList <--> javafx.EditDate
javafx.ToDoList <--> javafx.FilePathGetter
javafx.Item -> javafx.ToDoList
javafx.Item --> javafx.HelpPage
javafx.Item --> javafx.ExpandItem
javafx.Item --> javafx.EditDate
javafx.Item --> javafx.FilePathGetter

ToDoList -|> javafx.ToDoList
javafx.HelpPage -- HelpPageController
javafx.ExpandItem --- ExpandItemController
javafx.EditDate -- EditDateController
javafx.FilePathGetter --- FilePathGetterController

ToDoList -- ToDoListController

@enduml